<resources>
    <string name="app_name">RnadomChat</string>
    <string name="message_messagelist_no_preferences">버튼을 눌러 성별 및 대화주제를 선택하세요.</string>

    <string name="my_gender">나의 성별</string>
    <string name="partner_gender">상대방 성별</string>
    <string name="talk_subject">대화주제</string>
    <string name="gender_female">여자</string>
    <string name="gender_male">남자</string>

    <string name="message_select_subject">대화주제를 선택해 주세요.</string>

    <string name="text_button_cancel">취소</string>
    <string name="text_button_ok">확인</string>

</resources>
