<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_dialog_transparent" >

    <LinearLayout
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/bg_dialog_round">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginTop="2dp"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/text_color_preference_label"
                    android:text="@string/my_gender" />
            </LinearLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selectable_prefbox"
                android:padding="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/text_color_preference_item_label"
                    android:text="@string/gender_male" />
                <RadioButton
                    android:id="@+id/radiobutton_gender_male"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/selectable_radiobox"
                    android:button="@null"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginLeft="15dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/text_color_preference_item_label"
                    android:text="@string/gender_female" />
                <RadioButton
                    android:id="@+id/radiobutton_gender_female"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/selectable_radiobox"
                    android:button="@null"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginTop="2dp"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/text_color_preference_label"
                    android:text="@string/partner_gender" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selectable_prefbox"
                android:padding="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/text_color_preference_item_label"
                    android:text="@string/gender_male" />
                <CheckBox
                    android:id="@+id/checkbox_partner_gender_male"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/selectable_checkbox"
                    android:button="@null"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginLeft="15dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/text_color_preference_item_label"
                    android:text="@string/gender_female" />
                <CheckBox
                    android:id="@+id/checkbox_partner_gender_female"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/selectable_checkbox"
                    android:button="@null"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginTop="2dp"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/text_color_preference_label"
                    android:text="@string/talk_subject" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_btn_select_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selectable_prefbox_button_background"
                android:padding="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_subject_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/selectable_prefbox_button_text"
                    android:text="@string/message_select_subject" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:paddingTop="1dp"
            android:weightSum="100"
            android:background="@drawable/bg_dialog_button_set_bottom_round">

            <LinearLayout
                android:id="@+id/dialog_layout_button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:clickable="true"
                android:orientation="horizontal"
                android:background="@drawable/selectable_dialog_lbutton_bottom_round">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/selectable_dialog_button_text"
                    android:text="@string/text_button_cancel" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dialog_layout_button_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:clickable="true"
                android:orientation="horizontal"
                android:background="@drawable/selectable_dialog_rbutton_bottom_round">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/selectable_dialog_button_text"
                    android:text="@string/text_button_ok" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout >